<resources>
    <string name="app_name">Foody</string>
    <string name="menu">Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">"Home screen "</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="second">Second</string>
    <string name="menuOrder">Menu order</string>
    <string name="menu_notification">Menu push notification</string>
    <string name="menu_notification_pref" translatable="false">pref_get_menu_notification</string>
    <string name="soups">Soups</string>
    <string name="exit">Exit</string>
    <string name="clear_basket">clear basket</string>
    <string name="add_to_basket">Add to basket</string>
    <string name="login">Login</string>
    <string name="remember_password">Remember password</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="invalid_login_data">Invalid username or password</string>
</resources>