<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".presentation.activity.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldUserName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textFieldPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:startIconDrawable="@drawable/ic_azonosito">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:hint="@string/username"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:backgroundTint="@color/white"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxRememberPassword"
        app:layout_constraintEnd_toEndOf="@+id/textFieldUserName"
        app:layout_constraintStart_toStartOf="@+id/textFieldUserName"
        app:layout_constraintTop_toBottomOf="@+id/textFieldUserName"
        app:passwordToggleDrawable="@drawable/ic_szem"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_regi_kulcs">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBoxRememberPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_vertical_margin"
        android:text="@string/remember_password"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/cardViewLogin"
        app:layout_constraintEnd_toEndOf="@+id/textFieldPassword"
        app:layout_constraintStart_toStartOf="@+id/textFieldPassword"
        app:layout_constraintTop_toBottomOf="@+id/textFieldPassword" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_horizontal_margin"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxRememberPassword"
        app:layout_constraintStart_toStartOf="@+id/checkBoxRememberPassword"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRememberPassword">

        <Button
            android:id="@+id/buttonLogin"
            style="@style/ButtBorderless"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_nyitott_ajto"
            android:paddingStart="15dp"
            android:text="@string/login"
            app:layout_constraintCircleRadius="200dp" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>