<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".presentation.activity.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primary_color"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name"
        app:titleTextColor="@color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listViewDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarMain" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listViewMenu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/imageViewAddToBasketMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listViewDays"
        tools:listitem="@layout/menu_item" />

    <ImageView
        android:id="@+id/imageViewAddToBasketMain"
        style="@style/defaultButton"
        android:layout_width="@dimen/default_img_button"
        android:layout_height="@dimen/default_img_button"
        android:contentDescription="@string/add_to_basket"
        android:padding="0dp"
        android:src="@drawable/ic_add_basket"
        app:layout_constraintBottom_toTopOf="@id/constraintLayoutOrderMain"
        app:layout_constraintEnd_toStartOf="@id/imageViewClearBasketMain"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewClearBasketMain"
        style="@style/defaultButton"
        android:layout_width="@dimen/default_img_button"
        android:layout_height="@dimen/default_img_button"
        android:contentDescription="@string/clear_basket"
        android:padding="0dp"
        android:src="@drawable/ic_clear_basket"
        app:layout_constraintBottom_toBottomOf="@id/imageViewAddToBasketMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageViewAddToBasketMain"
        app:layout_constraintTop_toTopOf="@id/imageViewAddToBasketMain" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutOrderMain"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>